--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
+  freezed: ^2.4.6
+  dio: ^5.4.0
+  flutter_bloc: ^8.1.3
+  uuid: ^4.2.2
+  equatable: ^2.0.5
+  injectable: ^2.3.2
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
