--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   equatable: ^2.0.5
   injectable: ^2.3.2
   get_it: ^7.6.7
+  google_fonts: ^6.1.0
+  page_transition: ^2.1.0
 
 dev_dependencies:
   flutter_test:
