Add pinput dependency and update MyApp instantiation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,13 @@
         "Autovalidate",
         "cupertino",
         "dartz",
+        "hashcode",
         "inno",
         "nunito",
+        "Pinput",
         "roboto",
+        "unfocus",
+        "usecases",
         "wireframe"
     ]
 }
