--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^7.6.7
   google_fonts: ^6.1.0
   page_transition: ^2.1.0
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
