chore: Update dependencies and add pinput dependency

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,13 @@
         "cupertino",
         "dartz",
         "hashcode",
+        "implementaion",
         "inno",
         "nunito",
         "Pinput",
         "roboto",
         "unfocus",
+        "usecase",
         "usecases",
         "wireframe"
     ]
