working on the article api integration

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "nunito",
         "Pinput",
         "roboto",
+        "svgrepo",
+        "techcrunch",
         "unfocus",
         "usecase",
         "usecases",
