chore: Update dependencies and add cached_network_image package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   awesome_extensions: ^2.0.14
   flutter_svg: ^2.0.10+1
 
+  cached_network_image: ^3.3.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
